# revreaddy

./: .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  TODO.md  __init__.py  build-debug.sh  build-release.sh  pybinding.cpp  readme.rst  revreaddy.py  setup.py  setup.py~  setupCython.py  sim.cpp  sim.pyx  test.py  test.py~  test_revreaddy.py  utils.py
cmake/: FindFFTW3.cmake
doc/: Makefile  conf.py  index.rst
include/: Acceptance.h  ActiveParticles.h  BinaryFile.h  Config.h  Conversion.h  DoubleWellZ.h  Energy.h  Exception.h  Filehandler.h  Force.h  Fusion.h  Fusion2.h  Fusion3.h  GenericSimulation.h  Geometry.h  LennardJones.h  MeanSquaredDisplacement.h  Neighborlist.h  Observable.h  Particle.h  ParticleInteraction.h  ParticleNumbers.h  ParticleType.h  Potential.h  ProbabilityDensity.h  RadialDistribution.h  Random.h  Reaction.h  ReactionEvent.h  Simulation.h  SimulationImpl.h  SingleParticleDiffusion.h  SoftRepulsion.h  Trajectory.h  TrajectorySingle.h  TypeDict.h  UnimolecularCandidate.h  Wall.h  World.h  logging.h  (+2 more)
include/geometries/: Geometry.h  Wall.h
include/interactions/: LennardJones.h  ParticleInteraction.h  SoftRepulsion.h
include/observables/: Acceptance.h  Energy.h  MeanSquaredDisplacement.h  Observable.h  ProbabilityDensity.h
include/reactions/: Conversion.h  Fusion.h
libraries/: print_table.py
preImplPython/: iprd.py~  iprd_v0.1.py  iprd_v0.2.py  iprd_v0.2.py~  iprd_v0.3.py  iprd_v0.3.py~
revreaddyC/: CMakeLists.txt
revreaddyC/include/: BinaryFile.h  Config.h  Neighborlist.h  Particle.h  ParticleType.h  Random.h  Simulation.h  SimulationImpl.h  UnimolecularCandidateType.h  World.h  utils.h
revreaddyC/include/geometries/: DoubleWellZ.h  Geometry.h  Wall.h
revreaddyC/include/interactions/: LennardJones.h  ParticleInteraction.h  SoftRepulsion.h
revreaddyC/include/observables/: Acceptance.h  Energy.h  Increments.h  MeanSquaredDisplacement.h  Observable.h  ParticleNumbers.h  ProbabilityDensity.h  RadialDistribution.h  ReactionCounter.h  Trajectory.h  TrajectoryUnique.h
revreaddyC/include/reactions/: Conversion.h  Enzymatic.h  Fusion.h  Reaction.h
revreaddyC/include/simulationImpls/: FractionalDiffusion.h  RevDiffusion.h  RevDiffusionRevReactions.h  RevReactions.h  SimulationImpl.h  generateIncrements.h
revreaddyC/src/: BinaryFile.cpp  Config.cpp  Particle.cpp  ParticleType.cpp  Random.cpp  ReactionEvent.cpp  Simulation.cpp  SimulationImpl.cpp  World.cpp
revreaddyC/src/geometries/: DoubleWellZ.cpp  Geometry.cpp  Wall.cpp
revreaddyC/src/interactions/: LennardJones.cpp  SoftRepulsion.cpp
revreaddyC/src/observables/: Acceptance.cpp  Energy.cpp  Increments.cpp  MeanSquaredDisplacement.cpp  Observable.cpp  ParticleNumbers.cpp  ProbabilityDensity.cpp  RadialDistribution.cpp  ReactionCounter.cpp  Trajectory.cpp  TrajectoryUnique.cpp
revreaddyC/src/reactions/: Conversion.cpp  Enzymatic.cpp  Fusion.cpp  Reaction.cpp
revreaddyC/src/simulationImpls/: FractionalDiffusion.cpp  RevDiffusion.cpp  RevDiffusionRevReactions.cpp  RevReactions.cpp  SimulationImpl.cpp  generateIncrements.cpp  generateIncrements.h
revreaddyC/tests/: CMakeLists.txt  CMakeLists.txt.orig  FractionalTest.cpp  ObservableTest.cpp  ReactionTest.cpp  SimulationTest.cpp  SimulationTest.h  integrationTest.cpp
revreaddyC/tests/unittests/: CMakeLists.txt  CMakeLists.txt.orig  ConfigUnittest.cpp  FractionalUnittest.cpp  ParticleUnittest.cpp  RandomTest.h  RandomUnittest.cpp  WorldTest.h  WorldUnittest.cpp  main.cpp
scripts/: acceptancetest.py  eff_plot.ipynb  energytest.py  example_simple.ipynb  fluid.py  fluid_efficiency.ipynb  generate_equilibrated_fluid.ipynb  hdf5test.py  lj_fluid_boxresize.ipynb  msdtest.py  performance.py  plotit.ipynb  rdfnormtest.hdf5  test.py  test_probdens.ipynb  test_rdf.ipynb  walltest.py  welltest.py
scripts/convergence/: soft_on_membrane.ipynb
scripts/efficiency/: fluid_efficiency.ipynb
scripts/rescaling/: msd_reversible.ipynb  msd_reversible_512lj.ipynb  msd_reversible_700lj.ipynb  msd_reversible_729soft.ipynb
scripts/rescaling/msd_300lj/: msd_300lj_analyse.ipynb  msd_300lj_createdata.ipynb
scripts/rescaling/msd_300lj_lessdense/: box13.tcl  msd_300lj_analyse.ipynb  msd_300lj_analyse_imprstalk.ipynb  msd_300lj_analyse_projecttalk.ipynb  msd_300lj_createdata.ipynb  msd_300lj_visualize.ipynb  vmdscene.scn  vmdscene.tga
scripts/rescaling/msd_300lj_lessdense/.ipynb_checkpoints/: msd_300lj_analyse-checkpoint.ipynb  msd_300lj_analyse_imprstalk-checkpoint.ipynb  msd_300lj_analyse_projecttalk-checkpoint.ipynb
scripts/saves/: equ_N256B16.0TE1.0TYsoftR1.0D1.0.hdf5  equ_N300B11.5TE1.0TYljR1.0D1.0.hdf5  equ_N300B13.0TE1.0TYljR1.0D1.0.hdf5  equ_N512B16.0TE1.0TYljR1.0D1.0.hdf5  equ_N512B16.0TE1.0TYsoftR1.0D1.0.hdf5  equ_N600B16.0TE1.0TYsoftR1.0D1.0.hdf5  equ_N700B16.0TE1.0TYljR1.0D1.0.hdf5  equ_N700B17.52TE1.0TYljR1.0D1.0.hdf5  equ_N729B16.0TE1.0TYsoftR1.0D1.0.hdf5
src/: Acceptance.cpp  ActiveParticles.cpp  BinaryFile.cpp  Config.cpp  Conversion.cpp  DoubleWellZ.cpp  Energy.cpp  Filehandler.cpp  Force.cpp  Fusion.cpp  Fusion2.cpp  Fusion3.cpp  Geometry.cpp  LennardJones.cpp  MeanSquaredDisplacement.cpp  Observable.cpp  Particle.cpp  ParticleInteraction.cpp  ParticleNumbers.cpp  ParticleType.cpp  Potential.cpp  ProbabilityDensity.cpp  RadialDistribution.cpp  Random.cpp  Reaction.cpp  Simulation.cpp  SimulationImpl.cpp  SingleParticleDiffusion.cpp  SoftRepulsion.cpp  Trajectory.cpp  TrajectorySingle.cpp  TypeDict.cpp  UnimolecularCandidate.cpp  Wall.cpp  World.cpp  main.cpp  pybinding.cpp  revreaddymodule.cpp  revreaddymodule.cpp~  utils.cpp
src/interactions/: LennardJones.cpp  ParticleInteraction.cpp  SoftRepulsion.cpp
src/observables/: Energy.cpp  MeanSquaredDisplacement.cpp  ProbabilityDensity.cpp  Trajectory.cpp
src/reactions/: Conversion.cpp  Fusion.cpp
tests/unittests/: ConfigTest.h  ForceTest.h  ParticleTest.h  PotentialTest.h  RadialDistributionTest.h  SimulationTest.h  TrajectoryTest.h  unittest.cpp
